lang/gforth: rebuilt for 1.7
git-svn-id: https://cygwin-ports.svn.sourceforge.net/svnroot/cygwin-ports/ports/trunk@8242 e127d73d-b18e-4ae1-a744-a22e6a3ccd30

--- a/README
+++ b/README
@@ -10,22 +10,23 @@ interpreter is direct threaded with several optimizations, but you can
 also use a traditional-style indirect threaded interpreter.
 
 Runtime requirements:
-  cygwin-1.5.25-15
-  libffi5-3.0.8-1
-  libltdl7-2.2.6a-1
+  cygwin-1.7.0-67
+  libffi4-4.3.4-1
+  libgcc1-4.3.4-1
+  libltdl7-2.2.7a-14
 
 Build requirements:
 (besides corresponding -devel packages)
-  autoconf2.5-2.63-1
-  automake1.9-1.9.6-3
-  binutils-20080624-2
+  autoconf2.5-2.63-10
+  automake1.9-1.9.6-10
+  binutils-2.19.51-1
   bison-2.3-1
-  cygport-0.4.3-1
+  cygport-0.9.10-1
   flex-2.5.35-1
-  gawk-3.1.6-1
-  gcc-core-3.4.4-3
-  libtool-2.2.6a-1
-  make-3.81-1
+  gawk-3.1.7-1
+  gcc4-core-4.3.4-1
+  libtool-2.2.7a-14
+  make-3.81-2
   sed-4.1.5-2
 
 Canonical website:
@@ -49,257 +50,10 @@ This will create:
 
 -------------------------------------------
 
-Files included in the binary package:
-
-  /usr/bin/gforth-0.7.0.exe
-  /usr/bin/gforth-fast-0.7.0.exe
-  /usr/bin/gforth-fast.exe
-  /usr/bin/gforth-itc-0.7.0.exe
-  /usr/bin/gforth-itc.exe
-  /usr/bin/gforth.exe
-  /usr/bin/gforthmi
-  /usr/bin/gforthmi-0.7.0
-  /usr/bin/vmgen
-  /usr/bin/vmgen-0.7.0
-  /usr/include/gforth/0.7.0/config.h
-  /usr/include/gforth/0.7.0/libcc.h
-  /usr/lib/gforth/0.7.0/gforth-ditc.exe
-  /usr/lib/gforth/0.7.0/gforth.fi
-  /usr/lib/gforth/0.7.0/libcc-named/cstr.dll
-  /usr/lib/gforth/0.7.0/libcc-named/cstr.la
-  /usr/lib/gforth/0.7.0/libcc-named/cygffi.dll
-  /usr/lib/gforth/0.7.0/libcc-named/libffi.la
-  /usr/lib/gforth/0.7.0/libcc-named/socket.dll
-  /usr/lib/gforth/0.7.0/libcc-named/socket.la
-  /usr/share/doc/gforth-0.7.0/AUTHORS
-  /usr/share/doc/gforth-0.7.0/BUGS
-  /usr/share/doc/gforth-0.7.0/COPYING
-  /usr/share/doc/gforth-0.7.0/COPYING.LIB
-  /usr/share/doc/gforth-0.7.0/ChangeLog
-  /usr/share/doc/gforth-0.7.0/INSTALL
-  /usr/share/doc/gforth-0.7.0/NEWS
-  /usr/share/doc/gforth-0.7.0/README
-  /usr/share/doc/gforth-0.7.0/TODO
-  /usr/share/gforth/0.7.0/TAGS
-  /usr/share/gforth/0.7.0/add.fs
-  /usr/share/gforth/0.7.0/ans-report.fs
-  /usr/share/gforth/0.7.0/ansi.fs
-  /usr/share/gforth/0.7.0/answords.fs
-  /usr/share/gforth/0.7.0/arch/386/asm.fs
-  /usr/share/gforth/0.7.0/arch/386/disasm.fs
-  /usr/share/gforth/0.7.0/arch/alpha/asm.fs
-  /usr/share/gforth/0.7.0/arch/alpha/disasm.fs
-  /usr/share/gforth/0.7.0/arch/alpha/testasm.fs
-  /usr/share/gforth/0.7.0/arch/amd64/asm.fs
-  /usr/share/gforth/0.7.0/arch/amd64/disasm.fs
-  /usr/share/gforth/0.7.0/arch/mips/asm.fs
-  /usr/share/gforth/0.7.0/arch/mips/disasm.fs
-  /usr/share/gforth/0.7.0/arch/mips/insts.fs
-  /usr/share/gforth/0.7.0/arch/mips/testasm.fs
-  /usr/share/gforth/0.7.0/arch/mips/testdisasm.fs
-  /usr/share/gforth/0.7.0/arch/power/asm.fs
-  /usr/share/gforth/0.7.0/arch/power/disasm.fs
-  /usr/share/gforth/0.7.0/arch/power/inst.fs
-  /usr/share/gforth/0.7.0/asm/README
-  /usr/share/gforth/0.7.0/asm/basic.fs
-  /usr/share/gforth/0.7.0/asm/bitmask.fs
-  /usr/share/gforth/0.7.0/asm/generic.fs
-  /usr/share/gforth/0.7.0/asm/numref.fs
-  /usr/share/gforth/0.7.0/asm/target.fs
-  /usr/share/gforth/0.7.0/assert.fs
-  /usr/share/gforth/0.7.0/backtrac.fs
-  /usr/share/gforth/0.7.0/blocked.fb
-  /usr/share/gforth/0.7.0/blocks.fs
-  /usr/share/gforth/0.7.0/bubble.fs
-  /usr/share/gforth/0.7.0/bufio.fs
-  /usr/share/gforth/0.7.0/build-ec.in
-  /usr/share/gforth/0.7.0/chains.fs
-  /usr/share/gforth/0.7.0/code.fs
-  /usr/share/gforth/0.7.0/colorize.fs
-  /usr/share/gforth/0.7.0/comp-i.fs
-  /usr/share/gforth/0.7.0/compat/README
-  /usr/share/gforth/0.7.0/compat/anslocal.fs
-  /usr/share/gforth/0.7.0/compat/assert.fs
-  /usr/share/gforth/0.7.0/compat/control.fs
-  /usr/share/gforth/0.7.0/compat/defer.fs
-  /usr/share/gforth/0.7.0/compat/exception.fs
-  /usr/share/gforth/0.7.0/compat/execute-parsing.fs
-  /usr/share/gforth/0.7.0/compat/loops.fs
-  /usr/share/gforth/0.7.0/compat/required.fs
-  /usr/share/gforth/0.7.0/compat/strcomp.fs
-  /usr/share/gforth/0.7.0/compat/struct.fs
-  /usr/share/gforth/0.7.0/compat/vocabulary.fs
-  /usr/share/gforth/0.7.0/complex.fs
-  /usr/share/gforth/0.7.0/cross.fs
-  /usr/share/gforth/0.7.0/cstr.fs
-  /usr/share/gforth/0.7.0/debug.fs
-  /usr/share/gforth/0.7.0/debugs.fs
-  /usr/share/gforth/0.7.0/depth-changes.fs
-  /usr/share/gforth/0.7.0/dis-gdb.fs
-  /usr/share/gforth/0.7.0/doc/makedoc.fs
-  /usr/share/gforth/0.7.0/dosekey.fs
-  /usr/share/gforth/0.7.0/doskey.fs
-  /usr/share/gforth/0.7.0/ds2texi.fs
-  /usr/share/gforth/0.7.0/ec/README
-  /usr/share/gforth/0.7.0/ec/builttag.fs
-  /usr/share/gforth/0.7.0/ec/dotx.fs
-  /usr/share/gforth/0.7.0/ec/mirror.fs
-  /usr/share/gforth/0.7.0/ec/nesting.fs
-  /usr/share/gforth/0.7.0/ec/shex.fs
-  /usr/share/gforth/0.7.0/ekey.fs
-  /usr/share/gforth/0.7.0/endtry-iferror.fs
-  /usr/share/gforth/0.7.0/environ.fs
-  /usr/share/gforth/0.7.0/envos.dos
-  /usr/share/gforth/0.7.0/envos.fs
-  /usr/share/gforth/0.7.0/envos.os2
-  /usr/share/gforth/0.7.0/errors.fs
-  /usr/share/gforth/0.7.0/etags.fs
-  /usr/share/gforth/0.7.0/exboot.fs
-  /usr/share/gforth/0.7.0/except.fs
-  /usr/share/gforth/0.7.0/extend.fs
-  /usr/share/gforth/0.7.0/fflib.fs
-  /usr/share/gforth/0.7.0/fft.fs
-  /usr/share/gforth/0.7.0/fi2c.fs
-  /usr/share/gforth/0.7.0/fib.fs
-  /usr/share/gforth/0.7.0/filedump.fs
-  /usr/share/gforth/0.7.0/fixpath.fs
-  /usr/share/gforth/0.7.0/float.fs
-  /usr/share/gforth/0.7.0/fsl-util.4th
-  /usr/share/gforth/0.7.0/glocals.fs
-  /usr/share/gforth/0.7.0/glosgen.fs
-  /usr/share/gforth/0.7.0/gray.fs
-  /usr/share/gforth/0.7.0/hash.fs
-  /usr/share/gforth/0.7.0/history.fs
-  /usr/share/gforth/0.7.0/httpd.fs
-  /usr/share/gforth/0.7.0/install-tags.fs
-  /usr/share/gforth/0.7.0/intcomp.fs
-  /usr/share/gforth/0.7.0/kernel/accept.fs
-  /usr/share/gforth/0.7.0/kernel/aliases.fs
-  /usr/share/gforth/0.7.0/kernel/aliases0.fs
-  /usr/share/gforth/0.7.0/kernel/args.fs
-  /usr/share/gforth/0.7.0/kernel/basics.fs
-  /usr/share/gforth/0.7.0/kernel/cbr.fs
-  /usr/share/gforth/0.7.0/kernel/cloop.fs
-  /usr/share/gforth/0.7.0/kernel/comp.fs
-  /usr/share/gforth/0.7.0/kernel/cond-old.fs
-  /usr/share/gforth/0.7.0/kernel/cond.fs
-  /usr/share/gforth/0.7.0/kernel/doers.fs
-  /usr/share/gforth/0.7.0/kernel/errore.fs
-  /usr/share/gforth/0.7.0/kernel/files.fs
-  /usr/share/gforth/0.7.0/kernel/getdoers.fs
-  /usr/share/gforth/0.7.0/kernel/input.fs
-  /usr/share/gforth/0.7.0/kernel/int.fs
-  /usr/share/gforth/0.7.0/kernel/io.fs
-  /usr/share/gforth/0.7.0/kernel/kernel.fs
-  /usr/share/gforth/0.7.0/kernel/license.fs
-  /usr/share/gforth/0.7.0/kernel/main.fs
-  /usr/share/gforth/0.7.0/kernel/nio.fs
-  /usr/share/gforth/0.7.0/kernel/pass.fs
-  /usr/share/gforth/0.7.0/kernel/paths.fs
-  /usr/share/gforth/0.7.0/kernel/prim0.fs
-  /usr/share/gforth/0.7.0/kernel/quotes.fs
-  /usr/share/gforth/0.7.0/kernel/require.fs
-  /usr/share/gforth/0.7.0/kernel/saccept.fs
-  /usr/share/gforth/0.7.0/kernel/tools.fs
-  /usr/share/gforth/0.7.0/kernel/toolsext.fs
-  /usr/share/gforth/0.7.0/kernel/vars.fs
-  /usr/share/gforth/0.7.0/kernel/xchars.fs
-  /usr/share/gforth/0.7.0/kernl32l.fi
-  /usr/share/gforth/0.7.0/lib.fs
-  /usr/share/gforth/0.7.0/libcc.fs
-  /usr/share/gforth/0.7.0/libffi.fs
-  /usr/share/gforth/0.7.0/locals.fs
-  /usr/share/gforth/0.7.0/locate.fs
-  /usr/share/gforth/0.7.0/look.fs
-  /usr/share/gforth/0.7.0/mach16b.fs
-  /usr/share/gforth/0.7.0/mach16l.fs
-  /usr/share/gforth/0.7.0/mach32b.fs
-  /usr/share/gforth/0.7.0/mach32l.fs
-  /usr/share/gforth/0.7.0/mach64b.fs
-  /usr/share/gforth/0.7.0/mach64l.fs
-  /usr/share/gforth/0.7.0/machpc.fs.in
-  /usr/share/gforth/0.7.0/make-app.fs
-  /usr/share/gforth/0.7.0/matrix.fs
-  /usr/share/gforth/0.7.0/mini-oof.fs
-  /usr/share/gforth/0.7.0/mkdir.fs
-  /usr/share/gforth/0.7.0/moof-exm.fs
-  /usr/share/gforth/0.7.0/moofglos.fs
-  /usr/share/gforth/0.7.0/more.fs
-  /usr/share/gforth/0.7.0/objects.fs
-  /usr/share/gforth/0.7.0/objexamp.fs
-  /usr/share/gforth/0.7.0/oldlib.fs
-  /usr/share/gforth/0.7.0/onebench.fs
-  /usr/share/gforth/0.7.0/oof.fs
-  /usr/share/gforth/0.7.0/oofsampl.fs
-  /usr/share/gforth/0.7.0/other.fs
-  /usr/share/gforth/0.7.0/prim
-  /usr/share/gforth/0.7.0/prims2x.fs
-  /usr/share/gforth/0.7.0/prims2x0.6.2.fs
-  /usr/share/gforth/0.7.0/proxy.fs
-  /usr/share/gforth/0.7.0/quotes.fs
-  /usr/share/gforth/0.7.0/random.fs
-  /usr/share/gforth/0.7.0/recover-endtry.fs
-  /usr/share/gforth/0.7.0/regexp.fs
-  /usr/share/gforth/0.7.0/savesys.fs
-  /usr/share/gforth/0.7.0/search.fs
-  /usr/share/gforth/0.7.0/see-ext.fs
-  /usr/share/gforth/0.7.0/see.fs
-  /usr/share/gforth/0.7.0/siev.fs
-  /usr/share/gforth/0.7.0/sieve.fs
-  /usr/share/gforth/0.7.0/simp-see.fs
-  /usr/share/gforth/0.7.0/sokoban.fs
-  /usr/share/gforth/0.7.0/source.fs
-  /usr/share/gforth/0.7.0/startup.fs
-  /usr/share/gforth/0.7.0/string.fs
-  /usr/share/gforth/0.7.0/struct.fs
-  /usr/share/gforth/0.7.0/struct0x.fs
-  /usr/share/gforth/0.7.0/stuff.fs
-  /usr/share/gforth/0.7.0/table.fs
-  /usr/share/gforth/0.7.0/tags.fs
-  /usr/share/gforth/0.7.0/tasker.fs
-  /usr/share/gforth/0.7.0/termsize.fs
-  /usr/share/gforth/0.7.0/test/checkans.fs
-  /usr/share/gforth/0.7.0/test/coreext.fs
-  /usr/share/gforth/0.7.0/test/coremore.fs
-  /usr/share/gforth/0.7.0/test/coretest.fs
-  /usr/share/gforth/0.7.0/test/dbltest.fs
-  /usr/share/gforth/0.7.0/test/deferred.fs
-  /usr/share/gforth/0.7.0/test/float.fs
-  /usr/share/gforth/0.7.0/test/gforth-nofast.fs
-  /usr/share/gforth/0.7.0/test/gforth.fs
-  /usr/share/gforth/0.7.0/test/libcc.fs
-  /usr/share/gforth/0.7.0/test/other.fs
-  /usr/share/gforth/0.7.0/test/postpone.fs
-  /usr/share/gforth/0.7.0/test/primtest.fs
-  /usr/share/gforth/0.7.0/test/search.fs
-  /usr/share/gforth/0.7.0/test/signals.fs
-  /usr/share/gforth/0.7.0/test/string.fs
-  /usr/share/gforth/0.7.0/test/tester.fs
-  /usr/share/gforth/0.7.0/test/ttester.fs
-  /usr/share/gforth/0.7.0/tt.fs
-  /usr/share/gforth/0.7.0/unbuffer.fs
-  /usr/share/gforth/0.7.0/unix/socket.fs
-  /usr/share/gforth/0.7.0/utf-8.fs
-  /usr/share/gforth/0.7.0/vt100.fs
-  /usr/share/gforth/0.7.0/vt100key.fs
-  /usr/share/gforth/0.7.0/wordinfo.fs
-  /usr/share/gforth/0.7.0/wordsets.fs
-  /usr/share/gforth/0.7.0/xwords.fs
-  /usr/share/gforth/site-forth/siteinit.fs
-  /usr/share/info/gforth.info-1.gz
-  /usr/share/info/gforth.info-2.gz
-  /usr/share/info/gforth.info-3.gz
-  /usr/share/info/gforth.info-4.gz
-  /usr/share/info/gforth.info.gz
-  /usr/share/info/vmgen.info.gz
-  /usr/share/man/man1/gforth.1.gz
-
-------------------
-
 Port Notes:
 
------ version 0.7.0-1 -----
-Initial release for Cygwin.
+----- version 0.7.0-2 -----
+Initial release for Cygwin 1.7.
 
 
 Cygwin port maintained by:
